--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@use-gesture/react": "^10.2.6",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-full-screen": "^1.1.0",
+    "react-swipeable": "^6.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
